--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,37 +1,37 @@
-<nav class="navbar navbar-expand-lg fixed-top">
+<nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#">ERP System</a>
     <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
         <!-- <span class="navbar-toggler-icon"></span> -->
         <i class="fa fa-bars text-muted" aria-hidden="true"></i>
     </button>
-    <div class="collapse navbar-collapse">       
+    <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown" ngbDropdown>
-            <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
-                <i class="fa fa-shopping-cart"></i> Purchase<b class="caret"></b>
-            </a>
-            <div class="dropdown-menu-right" ngbDropdownMenu>
-                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-requisition']">
-                    <i class="fa fa-pencil" aria-hidden="true"></i> Purchase Requisition
+            <li class="nav-item dropdown" ngbDropdown>
+                <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
+                    <i class="fa fa-shopping-cart"></i> Purchase<b class="caret"></b>
                 </a>
-                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-orders']">
-                    <i class="fa fa-shopping-basket" aria-hidden="true"></i> Purchase Orders
-                </a>
-                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/grn']">
-                    <i class="fa fa-truck" aria-hidden="true"></i> GRN
-                </a>
-                <!--<a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/grn-reverse']">
+                <div class="dropdown-menu-right" ngbDropdownMenu>
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-requisition']">
+                        <i class="fa fa-pencil" aria-hidden="true"></i> Purchase Requisition
+                    </a>
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-orders']">
+                        <i class="fa fa-shopping-basket" aria-hidden="true"></i> Purchase Orders
+                    </a>
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/grn']">
+                        <i class="fa fa-truck" aria-hidden="true"></i> GRN
+                    </a>
+                    <!--<a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/grn-reverse']">
                     <i class="fa fa-truck" aria-hidden="true"></i> GRN Reverse
                 </a>-->
-                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-invoice']">
-                    <i class="fa fa-money" aria-hidden="true"></i> Purchase Invoice
-                </a>
-                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/payment']">
-                    <i class="fa fa-money" aria-hidden="true"></i> Payments
-                </a>
-            </div>
-        </li>
-        <!--<li class="nav-item">         
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-invoice']">
+                        <i class="fa fa-money" aria-hidden="true"></i> Purchase Invoice
+                    </a>
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/payment']">
+                        <i class="fa fa-money" aria-hidden="true"></i> Payments
+                    </a>
+                </div>
+            </li>
+            <!--<li class="nav-item">         
             <a routerLink="/company" [routerLinkActive]="['router-link-active']"  class="nav-link" >
                 <i class="fa fa-rupee"></i>&nbsp;Customer Invoice
             </a>
@@ -91,7 +91,7 @@
                 <i class="fa fa-list-alt"></i>&nbsp;Accounting
             </a>
         </li>-->
-        <li class="nav-item dropdown" ngbDropdown>
+            <li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
                     <i class="fa fa-cog"></i> Setting<b class="caret"></b>
                 </a>
@@ -133,7 +133,7 @@
                         <i class="fa fa-list" aria-hidden="true"></i> Other Party
                     </a>-->
                 </div>
-            </li>         
+            </li>
             <li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
                     <i class="fa fa-building-o"></i> Company<b class="caret"></b>
@@ -157,7 +157,7 @@
                     <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/sale-group']">
                         <i class="fa fa-university" aria-hidden="true"></i> Sale Group
                     </a>
-                    
+
                 </div>
             </li>
             <li class="nav-item dropdown" ngbDropdown>
@@ -168,7 +168,7 @@
                     <!--<a class="dropdown-item" href="javascript:void(0)">
                         <i class="fa fa-fw fa-user"></i> {{ 'Profile' | translate }}
                     </a>-->
-                    
+
                     <a class="dropdown-item" [routerLink]="['/login']" (click)="onLoggedout()">
                         <i class="fa fa-fw fa-power-off"></i> {{ 'Log Out' | translate }}
                     </a>
