--- a/src/app/layout/landing-page/landing-page.component.html
+++ b/src/app/layout/landing-page/landing-page.component.html
@@ -1,14 +1,64 @@
 <div>
-  <!-- <app-page-header [heading]="'Company Hierarchy'" [icon]="'fa fa-university'"></app-page-header> -->
-  <div class="row">
-    <div class="col-md-6">
-      <h4 class="page-header">Welcome to Shyam Steel Industries Limited</h4>
+    <!-- <app-page-header [heading]="'Company Hierarchy'" [icon]="'fa fa-university'"></app-page-header> -->
+    <div class="row">
+        <div class="col-md-12">
+            <h4 class="page-header landingpage">Welcome to Shyam Steel Industries Limited<br>
+                <div class="ibox"></div>
+            </h4>
+            <p class="text-center ">
+
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's <br>standard dummy text ever since the 1500s, when an unknown printer took a galley
+
+            </p>
+
+            <hr>
+        </div>
+
+        <div class="container">
+            <div class="row cata-gory">
+
+                <div class="col-md-4">
+                    <div class="inner-contant">
+                        <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                        <h4>Help</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley </p>
+                        <a href="#">Read More</a>
+                    </div>
+
+
+
+                </div>
+
+
+                <div class="col-md-4">
+                    <div class="inner-contant">
+                        <i class="fa fa-building-o" aria-hidden="true"></i>
+                        <h4>Company Details</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley </p>
+                        <a href="#">Read More</a>
+                    </div>
+
+
+
+                </div>
+
+
+                <div class="col-md-4">
+                    <div class="inner-contant">
+                        <i class="fa fa-cog" aria-hidden="true"></i>
+                        <h4>My Account</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley </p>
+                        <a href="#">Read More</a>
+                    </div>
+
+
+
+                </div>
+
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </div>
-    <div class="col-md-6 pull-right" style="text-align: right">
-      
-    </div>
-    <div class="clearfix"></div>
-  </div>
-  <hr/>
+
 
 </div>
