--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,5 +1,5 @@
 .main-container {
-    margin-top: 56px;
+    //margin-top: 56px;
     //margin-left: 200px;
     padding: 15px;
     -ms-overflow-x: hidden;
@@ -8,6 +8,7 @@
     position: relative;
     overflow: hidden;
 }
+
 @media screen and (max-width: 992px) {
     .main-container {
         margin-left: 0px !important;
