--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -44,6 +44,64 @@
 
 .main-body .main-container {
     background: url(../assets/images/all-bg.jpg) no-repeat 0 0 !important;
+    background-attachment: fixed;
     background-size: 100% !important;
-    min-height: 630px;
+    min-height: 612px;
+}
+
+.main-body .landingpage {
+    text-align: center;
+    font-size: 28px;
+    padding: 36px 0 12px;
+    color: #1976d2;
+    font-weight: bold;
+    text-shadow: 2px 1px 1px #B6B8BF;
+}
+
+.main-body .ibox {
+    height: 5px;
+    width: 166px;
+    background: #1976d2;
+    display: inline-block;
+}
+
+.cata-gory .inner-contant {
+    padding: 10px;
+    text-align: center;
+    background: #fff;
+    -webkit-box-shadow: -1px -1px 16px -3px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px -1px 16px -3px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px -1px 16px -3px rgba(0, 0, 0, 0.75);
+    min-height: 230px;
+}
+
+.cata-gory .inner-contant i {
+    font-size: 46px;
+    color: #1976d2;
+}
+
+.cata-gory .inner-contant h4 {
+    font-size: 25px;
+}
+
+.cata-gory .inner-contant a {
+    padding: 8px;
+    color: #1976d2;
+    border: 2px solid #00000042;
+    border-radius: 7px;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    transition: all .40s ease-out;
+}
+
+.cata-gory .inner-contant a:hover {
+    background: #094d90;
+    color: #fff;
+    transition: all .40s ease;
+}
+
+.cata-gory {
+    margin-top: 28px;
 }
